bot joins and leaves voice with button press

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "push_to_talk_key": "f5",
     "audio_device": "Microphone (2- BEACN Mic) (MME)",
     "ws_enabled": true,
-    "bits_hotkey": "f1",
+    "tts_hotkey": "f1",
     "follows_hotkey": "f2",
     "subs_hotkey": "f3",
     "gifts_hotkey": "f4"
